add AI infra
jvmTarget is now customizable

java-conventions broken into 2 parts

add shortcut for compilation orders

add task-tree

gradle/libs.version.toml is no longer excluded in idea

gradleVersion is now hardcoded

scala3 source is now always 3.3-migration

(see https://www.scala-lang.org/api/3.7.0/docs/docs/reference/language-versions/source-compatibility.html)

aggregate testLogging

semanticdb-javac is now in the dependency to augment index

kind-project is not maintained, removing

scalaJS version merged into Scala block

various fixes